@@ -1,0 +1,15 @@
+{
+  "name": "ptomulik-portsng",
+  "version": "0.1.2",
+  "author": "ptomulik",
+  "summary": "Ports provider for package resource type",
+  "license": "Apache License, Version 2.0",
+  "source": "git://github.com/ptomulik/puppet-portsng.git",
+  "project_page": "https://gitbub.com/ptomulik/puppet-portsng",
+  "issues_url": "https://github.com/ptomulik/puppet-portsng/issues",
+  "description": "Ports provider for package resource type",
+  "dependencies": [
+    {"name":"ptomulik/portsutil","version_requirement":">= 0.0.3"},
+    {"name":"ptomulik/backport_package_settings","version_requirement":">= 0.0.1"}
+  ]
+}
